feat: API Explorer interactif pour tous les endpoints

--- a/src/KBA.Framework.Api/wwwroot/index.html
+++ b/src/KBA.Framework.Api/wwwroot/index.html
@@ -63,9 +63,15 @@
 
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             margin-bottom: 40px;
+        }
+        
+        @media (max-width: 768px) {
+            .card-grid {
+                grid-template-columns: 1fr;
+            }
         }
 
         .card {
@@ -201,16 +207,22 @@
         </div>
 
         <div class="card-grid">
-            <a href="/api-docs" class="card">
-                <div class="card-icon">📚</div>
-                <div class="card-title">Documentation ReDoc</div>
-                <div class="card-description">Documentation API complète et interactive</div>
+            <a href="/api-explorer.html" class="card">
+                <div class="card-icon">🚀</div>
+                <div class="card-title">API Explorer</div>
+                <div class="card-description">Tests interactifs de tous les endpoints</div>
             </a>
 
             <a href="/swagger" class="card">
                 <div class="card-icon">🔧</div>
                 <div class="card-title">Swagger UI</div>
-                <div class="card-description">Interface de test des endpoints</div>
+                <div class="card-description">Documentation Swagger classique</div>
+            </a>
+
+            <a href="/api-docs" class="card">
+                <div class="card-icon">📚</div>
+                <div class="card-title">Documentation ReDoc</div>
+                <div class="card-description">Documentation complète et élégante</div>
             </a>
 
             <a href="/api/init/status" class="card" target="_blank">
